added width and height

--- a/hci-style.css
+++ b/hci-style.css
@@ -30,6 +30,8 @@ main {
 }
 
 button {
+    width: 120px; /* Larger width */
+    height: 60px; /* Larger height */
     margin-bottom: 5px; /* Space between buttons when vertically aligned */
     font-size: 45px;
 }
