--- a/hci-style.css
+++ b/hci-style.css
@@ -38,7 +38,7 @@ main {
 
 button {
     margin-bottom: 5px; /* Space between buttons when vertically aligned */
-    font-size: 16px;
+    font-size: 16px; /*test*/
 }
 
 #info {
