--- a/hci-style.css
+++ b/hci-style.css
@@ -12,7 +12,7 @@ body{
 }
 
 header, footer {
-    background-color: #007bff;
+    background-color: #000000;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -23,7 +23,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(100% - 200px); /* Adjust based on header/footer height */
+    height: calc(100% - 60px); /* Adjust based on header/footer height */
 }
 
 #buttonsContainer {
