--- a/hci-style.css
+++ b/hci-style.css
@@ -2,6 +2,7 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 body{
@@ -9,6 +10,7 @@ body{
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 header, footer {
