--- a/hci-style.css
+++ b/hci-style.css
@@ -24,9 +24,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     height: calc(100% - 60px); /* Adjust based on header/footer height */
 }
+
 
 #buttonsContainer {
     display: flex;
@@ -45,5 +46,5 @@ button {
 
 #info {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
