--- a/hci-style.css
+++ b/hci-style.css
@@ -34,14 +34,14 @@ main {
     flex-direction: column; /* Stack buttons vertically */
     align-items: center;
     position: fixed;
-    bottom: 60px;
+    bottom: 90px;
     left: 10px;
     padding: 10px;
 }
 
 button {
     margin-bottom: 15px; /* Space between buttons when vertically aligned */
-    font-size: 24px; /*test*/
+    font-size: 24px; 
 }
 
 #info {
